Port test additions from the 2.4 branch.